--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ h1 {
   color: rgba(0, 0, 0, 0.747);
 }
 h2 {
-  font-size: 2.5em !important;
+  font-size: 2em !important;
   font-weight: 600;
   line-height: 1.5em;
   color: rgba(0, 0, 0, 0.747);
@@ -17,6 +17,7 @@ h2 {
 li {
   font-size: 1.3em;
   font-weight: 300 !important;
+  margin: 5px !important;
 }
 p {
   font-size: 1.3em;
